--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 </body>
 </html>
 
- <body background><img src="\images\tile_background (2).png">
+ <body background>
+   <img src="\images\tile_background (2).png">
 
