--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 </html>
 
 <backround>
-  background: "images/Web.png";
+<meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg"> 
   
 
